--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
   justify-self: center;
   justify-content: center;
+  align-items: center;
 
   /* Sizes */
   max-width: 600px;
@@ -32,12 +33,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+
+  border: 1px solid black;
+  background-image: linear-gradient(
+    45deg,
+    rgb(226, 226, 226),
+    rgb(209, 209, 209)
+  );
 }
 
 .empty-field {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: brown;
+
+  border: 1px solid rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
+  color: rgba(0, 0, 0, 0);
 }
