--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   grid-template-columns: repeat(10, 10vmax);
   grid-template-rows: repeat(10, 10vh);
   background-color: rgb(185, 185, 185);
+  font-family: fantasy;
 }
 
 #game-board {
@@ -27,6 +28,7 @@ body {
   border-radius: 10px;
   box-shadow: 0px 0px 20px 10px rgb(73, 73, 73);
   background-color: rgb(231, 231, 231);
+  transition: 300ms;
 }
 
 .regular-field {
@@ -34,10 +36,15 @@ body {
   justify-content: center;
   align-items: center;
 
+  margin: 2px;
   border: 1px solid black;
+  border-radius: 5px;
+  font-size: 2vmax;
+
+  transition: inherit;
   background-image: linear-gradient(
     45deg,
-    rgb(226, 226, 226),
+    rgb(253, 253, 253),
     rgb(209, 209, 209)
   );
 }
@@ -47,7 +54,29 @@ body {
   justify-content: center;
   align-items: center;
 
+  margin: 2px;
   border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+
+  transition: inherit;
   color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.chosen-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 2px;
+  border: 1px solid red;
+  border-radius: 5px;
+  font-size: 2vmax;
+
+  transition: inherit;
+  background-image: linear-gradient(
+    45deg,
+    rgb(253, 253, 253),
+    rgb(209, 209, 209)
+  );
 }
